plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'my.lazyskulptor'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

ext {
	set('testcontainersVersion', "1.17.6")
}

dependencies {
	implementation 'io.smallrye.reactive:mutiny-reactor:2.1.0'
	implementation 'org.springframework.data:spring-data-commons'
	implementation "org.hibernate.reactive:hibernate-reactive-core:1.1.9.Final"
	implementation "io.vertx:vertx-mysql-client:4.4.1"
	runtimeOnly "mysql:mysql-connector-java:8.0.32"
	implementation "javax.validation:validation-api:2.0.1.Final"
	implementation 'org.apache.commons:commons-dbcp2:2.9.0'

	implementation "org.liquibase:liquibase-core"
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.testcontainers:junit-jupiter'

	testImplementation "org.testcontainers:mysql"
}

dependencyManagement {
	imports {
		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
